# conda-random-subcomand

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
conda_random_subcommand/: command.py  plugin.py
