[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-random-subcommand"
description = "A random conda subcommand"
readme = "README.md"
authors = [
  {name = "Chris Ostrouchov", email = "chris.ostrouchov@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
requires-python = ">=3.7"
dependencies = [
  "conda >=22.11.0",
  "importlib-metadata"
]
dynamic = [
  "version"
]

[project.entry-points.conda]
conda-random-subcommand = "conda_random_subcommand.plugin"

[tool.hatch.version]
path = "conda_random_subcommand/__init__.py"